# FinBot

./: .gitignore  Dockerfile  DockerfileBack  DockerfileDash  DockerfileFront  DockerfileRedditApi  LICENSE  README.md  contribute.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt  run.sh  test.py
.github/workflows/: main.yml
app/: app.py  chatbot_section.py  dao.py  requirements.txt  ticker_section.py
app/api_adapter/: chromadb_adapter.py  dao.py  faiss_adapter.py  langchain_adapter.py  yfinance_adapter.py
app/assets/: styles.css
dash_app/: app.py  chatbot_section.py  requirements.txt  ticker_section.py
dash_app/api_adapter/: finbot_adapter.py  yfinance_adapter.py
dash_app/assets/: styles.css
documentations/: class-diagram-api.uml  class-diagram-webapp.uml  deploy-diagram.uml
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_cached.json  .graphify_chunk_1.json  .graphify_detect.json  .graphify_extract.json  .graphify_python  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json
reddit_api/: app.py  background_scrapping.py  dao.py  faiss_adapter.py  langchain_adapter.py  logger_config.py  main.py  models.py  proxy.txt  requirements.txt  sessions.py  test.py  utils.py  yars.py
reddit_api/adapter/: faiss_adapter.py  finbot_agent.py  finbot_agent_old.py  langchain_adapter.py  vector_db_adapter.py
reddit_api/scrapping/: background_scrapping.py  proxy_manager.py  sessions.py  yars.py
reddit_api/static/: proxy_success.csv
