[project]
name = "finbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "chromadb>=0.6.3",
    "dash>=3.0.1",
    "dash-bootstrap-components>=2.0.0",
    "dash-mantine-components>=1.1.0",
    "gunicorn>=23.0.0",
    "langchain-together>=0.3.0",
    "oracledb>=3.0.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "yfinance>=0.2.55",
]
