[project]
name = "finbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "dash>=3.0.1",
    "dash-bootstrap-components>=2.0.0",
    "dash-mantine-components>=1.1.0",
    "faiss-cpu>=1.10.0",
    "gunicorn>=23.0.0",
    "langchain-together>=0.3.0",
    "langgraph>=0.3.21",
    "oracledb>=3.0.0",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.0.1",
    "sqlalchemy>=2.0.40",
    "yfinance>=0.2.55",
]
